Fix for Bug#3754 "SET GLOBAL myisam_max_sort_file_size doesn't work as expected": precision-losing conversion removed from sys_var_thd_ulonglong.

mysql-test/r/variables.result:
  Test case for Bug#3754
mysql-test/t/variables.test:
  Test case for Bug#3754
sql/set_var.cc:
  Fix for Bug#3754: precision-losing conversion removed from 
  sys_var_thd_ulonglong.